[project]
name = "api"
version = "0.1.0"
description = "See README"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1", # scraper
    "httpx==0.25.0", # scraper
    "playwright>=1.51.0", # scraper
    "py-pushover-client==1.0.0.dev2", # app
    "python-dotenv==1.0.0", # scraper
    "selectolax==0.3.16", # scraper
    "sqlalchemy==2.0.23", # app
    "textdistance==4.6.0", # scraper
    "uvicorn==0.24.0.post1", # scraper
]

[dependency-groups]
dev = [
    "mypy==1.6.1",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "ruff==0.1.5",
]

[tool.ruff]
cache-dir = "~/.cache/ruff"

[tool.ruff.extend-per-file-ignores]
# don't lint the tests with the following rules:
"tests/*" = [
    "S", # bandit
    "D", # pydocstyle
    ]
"__init__.py" = [
    "D104", # ignore missing docstring in public package
    ]

[tool.ruff.lint]
extend-select = [
    "F", # Pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings (optional)
    "C", # mccabe complexity
    "I", # isort
    "N", # pep8-naming (optional)
    "D", # pydocstyle
    "UP", # pyupgrade
    "S", # bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM", # flake8-errmsg
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD", # pandas-vet
    "PL", # pylint
    "TRY", # tryceratops
    "NPY", # numpy-specific rules
    "PERF", #perlint (performance)
    "RUF", # ruff-specific
    ]

extend-ignore = ["E501"] # line length

[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"


[tool.coverage.run]
source = ["src/"]

[tool.coverage.report]
exclude_also = [
    # debug-only code:
    "def __repr__",
    # defensive assertions:
    "raise NotImplementedError",
]

[tool.mypy]
cache_dir = "~/.cache/mypy"
strict = true 
ignore_missing_imports = true
exclude = "^tests/"
